--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = [
   Programming Language :: Python,
   Topic :: Education,
   Topic :: Scientific/Engineering :: Mathematics,
-  Topic :: Scientific/Engineering :: Physics
+  Topic :: Scientific/Engineering :: Physics,
 ]
 
 [project.urls]
