--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pyPhysumber
+name = pyphysumber
 version = 2025.0.0a1
 author = Aitzaz Imtiaz
 author_email = aitzazimtiaz.ai@gmail.com
@@ -25,7 +25,7 @@ python_requires = >=3.9
 install_requires =
 
 [options.package_data]
-pyPhysumber = *.txt, *.md
+pyphysumber = *.txt, *.md
 
 [options.entry_points]
 console_scripts =
