prune `.pylintrc` for build process
Useless for building stages

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,7 +5,7 @@ include Code_of_conduct.md
 recursive-include pyPhysumber *.py
 recursive-include pyPhysumber *.so *.dll *.dylib
 
-global-exclude __pycache__ *.pyc *.pyo *.pyd .DS_Store .gitignore .gitattributes
+global-exclude __pycache__ *.pyc *.pyo *.pyd .DS_Store .gitignore .gitattributes .pylintrc
 prune tests
 prune docs
 prune examples
