--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -10,14 +10,18 @@ jobs:
         python-version: ["3.9", "3.10", "3.11"]
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install pylint pytest  # Install pylint & pytest
+        pip install -e .  # Install physumber from the repo
+
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
