--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,8 @@ packages = find:
 include_package_data = True
 python_requires = >=3.9
 install_requires =
-
+    logging
+    importlib
 [options.package_data]
 pyphysumber = *.txt, *.md
 
