--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "pyphysumber"
 version = "2025.0.0a1"
-dependencies = []
+dependencies = [
+  "logging",
+  "importlib"
+]
 requires-python = ">= 3.9"
 authors = [
   {name = "Aitzaz Imtiaz", email = "aitzazimtiaz.ai@gmail.com"}
