Update setup.cfg to improve conflict

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,11 +20,14 @@ classifiers =
 
 [options]
 packages = find:
+package_dir =
+    physumber = pyphysumber
 include_package_data = True
 python_requires = >=3.9
 install_requires =
     logging
     importlib
+    
 [options.package_data]
 pyphysumber = *.txt, *.md
 
