--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ classifiers =
     Topic :: Scientific/Engineering :: Physics
 
 [options]
-packages = find:
+packages = pyphysumber:
 package_dir =
     physumber = pyphysumber
 include_package_data = True
