--- a/setup.cfg
+++ b/setup.cfg
@@ -19,9 +19,9 @@ classifiers =
     Topic :: Scientific/Engineering :: Physics
 
 [options]
-packages = pyphysumber:
+packages = physumber:
 package_dir =
-    physumber = pyphysumber
+    = pyphysumber
 include_package_data = True
 python_requires = >=3.9
 install_requires =
