Rename pyPhysumber naming to physumber
Simplify the naming convention leading to conforming linter and focusing on
buidling.

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ classifiers =
 [options]
 packages = physumber:
 package_dir =
-    = pyphysumber
+    = physumber
 include_package_data = True
 python_requires = >=3.9
 install_requires =
@@ -29,7 +29,7 @@ install_requires =
     importlib
     
 [options.package_data]
-pyphysumber = *.txt, *.md
+physumber = *.txt, *.md
 
 [options.entry_points]
 console_scripts =
