--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pyphysumber
+name = physumber
 version = 2025.0.0a1
 author = Aitzaz Imtiaz
 author_email = aitzazimtiaz.ai@gmail.com
