--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pyphysumber"
+name = "physumber"
 version = "2025.0.0a1"
 dependencies = [
   "logging",
@@ -41,7 +41,3 @@ Changelog = "https://github.com/physumber/pyPhysumber/blob/master/CHANGELOG.txt"
 
 [project.scripts]
 "sumber-info" = "sumber:help"
-
-[tool.setuptools]
-package-dir = {physumber = "pyphysumber"}
-packages = ["physumber"] 
