--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,9 @@ classifiers = [
 ]
 
 [project.urls]
-Repository = "https://github.com/physumber/pyPhysumber.git"
-Issues = "https://github.com/physumber/pyPhysumber/issues"
-Changelog = "https://github.com/physumber/pyPhysumber/blob/master/CHANGELOG.txt"
+Repository = "https://github.com/physumber/physumber.git"
+Issues = "https://github.com/physumber/physumber/issues"
+Changelog = "https://github.com/physumber/physumber/blob/master/CHANGELOG.txt"
 
 [project.scripts]
 "sumber-info" = "physumber:help" 
