--- a/setup.cfg
+++ b/setup.cfg
@@ -19,9 +19,7 @@ classifiers =
     Topic :: Scientific/Engineering :: Physics
 
 [options]
-packages = physumber:
-package_dir =
-    = physumber
+packages = find:
 include_package_data = True
 python_requires = >=3.9
 install_requires =
